[gd_scene load_steps=83 format=3 uid="uid://cbvllpndrbxe6"]

[ext_resource type="Texture2D" uid="uid://dv73ryllw86sr" path="res://Assets/Enemies/Soldier/Soldier-Attack03.png" id="1_c6ruw"]
[ext_resource type="Script" uid="uid://6firwwxm0l4d" path="res://Game/Enemies/enemy.gd" id="1_revrt"]
[ext_resource type="Texture2D" uid="uid://dtu7omg0vdj26" path="res://Assets/Enemies/Soldier/Soldier-Death.png" id="2_revrt"]
[ext_resource type="Texture2D" uid="uid://do4r3b5rc3f7f" path="res://Assets/Enemies/Soldier/Soldier-Hurt.png" id="3_mjd8m"]
[ext_resource type="Texture2D" uid="uid://r7xkwh0joqhr" path="res://Assets/Enemies/Soldier/Soldier-Idle.png" id="4_7ua4p"]
[ext_resource type="Texture2D" uid="uid://5b1tp6kap1yl" path="res://Assets/Enemies/Soldier/Soldier-Walk.png" id="5_87yba"]
[ext_resource type="Texture2D" uid="uid://dr1diigmfhp35" path="res://Assets/Enemies/Orc/Orc-Attack01.png" id="6_0vkc5"]
[ext_resource type="Texture2D" uid="uid://cn3xgef7dlix1" path="res://Assets/Enemies/Orc/Orc-Death.png" id="7_2qc6i"]
[ext_resource type="Texture2D" uid="uid://bimydkb1q1jm4" path="res://Assets/Enemies/Soldier/Soldier-Attack01.png" id="7_mjd8m"]
[ext_resource type="Texture2D" uid="uid://bwnlw6wg7q4tj" path="res://Assets/Enemies/Orc/Orc-Hurt.png" id="8_e67r0"]
[ext_resource type="Texture2D" uid="uid://bag6fkogyuue2" path="res://Assets/Enemies/Orc/Orc-Idle.png" id="9_ny2v0"]
[ext_resource type="Texture2D" uid="uid://ckikvjp2tspd7" path="res://Assets/Enemies/Orc/Orc-Walk.png" id="10_kiovd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d7nk5"]
atlas = ExtResource("1_c6ruw")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4abut"]
atlas = ExtResource("1_c6ruw")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_22p2m"]
atlas = ExtResource("1_c6ruw")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j438h"]
atlas = ExtResource("1_c6ruw")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwja1"]
atlas = ExtResource("1_c6ruw")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u472q"]
atlas = ExtResource("1_c6ruw")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaveb"]
atlas = ExtResource("1_c6ruw")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tub5"]
atlas = ExtResource("1_c6ruw")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yall"]
atlas = ExtResource("1_c6ruw")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2kud"]
atlas = ExtResource("2_revrt")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pt8ac"]
atlas = ExtResource("2_revrt")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffloy"]
atlas = ExtResource("2_revrt")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0mcg"]
atlas = ExtResource("2_revrt")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbwbn"]
atlas = ExtResource("3_mjd8m")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uspc3"]
atlas = ExtResource("3_mjd8m")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6wtp"]
atlas = ExtResource("3_mjd8m")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lruib"]
atlas = ExtResource("3_mjd8m")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8cbx"]
atlas = ExtResource("4_7ua4p")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6ejm"]
atlas = ExtResource("4_7ua4p")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d3bq"]
atlas = ExtResource("4_7ua4p")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmwnj"]
atlas = ExtResource("4_7ua4p")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oppat"]
atlas = ExtResource("4_7ua4p")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dm71"]
atlas = ExtResource("4_7ua4p")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b46bf"]
atlas = ExtResource("5_87yba")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c20n6"]
atlas = ExtResource("5_87yba")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fm4b"]
atlas = ExtResource("5_87yba")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eklaw"]
atlas = ExtResource("5_87yba")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y53qo"]
atlas = ExtResource("5_87yba")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_am484"]
atlas = ExtResource("5_87yba")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftn7i"]
atlas = ExtResource("5_87yba")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_061c6"]
atlas = ExtResource("5_87yba")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_nwtew"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7nk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4abut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22p2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j438h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwja1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u472q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaveb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tub5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yall")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2kud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt8ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffloy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0mcg")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbwbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uspc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6wtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lruib")
}],
"loop": false,
"name": &"Hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8cbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6ejm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d3bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmwnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oppat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dm71")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b46bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c20n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fm4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eklaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y53qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftn7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_061c6")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7ua4p"]
atlas = ExtResource("7_mjd8m")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_87yba"]
atlas = ExtResource("7_mjd8m")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vkc5"]
atlas = ExtResource("7_mjd8m")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qc6i"]
atlas = ExtResource("7_mjd8m")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_e67r0"]
atlas = ExtResource("7_mjd8m")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny2v0"]
atlas = ExtResource("7_mjd8m")
region = Rect2(500, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_kiovd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ua4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87yba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vkc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qc6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e67r0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny2v0")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2kud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt8ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffloy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0mcg")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbwbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uspc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6wtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lruib")
}],
"loop": false,
"name": &"Hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8cbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6ejm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d3bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmwnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oppat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dm71")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b46bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c20n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fm4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eklaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y53qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftn7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_061c6")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kw8at"]
atlas = ExtResource("6_0vkc5")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2fja"]
atlas = ExtResource("6_0vkc5")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_goksr"]
atlas = ExtResource("6_0vkc5")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_quklo"]
atlas = ExtResource("6_0vkc5")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0riw"]
atlas = ExtResource("6_0vkc5")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_474lb"]
atlas = ExtResource("6_0vkc5")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq4dp"]
atlas = ExtResource("7_2qc6i")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n6db"]
atlas = ExtResource("7_2qc6i")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfijq"]
atlas = ExtResource("7_2qc6i")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnacq"]
atlas = ExtResource("7_2qc6i")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqmo8"]
atlas = ExtResource("8_e67r0")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_26vbu"]
atlas = ExtResource("8_e67r0")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xtx8"]
atlas = ExtResource("8_e67r0")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb5in"]
atlas = ExtResource("8_e67r0")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv0na"]
atlas = ExtResource("9_ny2v0")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5e23"]
atlas = ExtResource("9_ny2v0")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi7o2"]
atlas = ExtResource("9_ny2v0")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe5pg"]
atlas = ExtResource("9_ny2v0")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d62fj"]
atlas = ExtResource("9_ny2v0")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxqd7"]
atlas = ExtResource("9_ny2v0")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmvp4"]
atlas = ExtResource("10_kiovd")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg66b"]
atlas = ExtResource("10_kiovd")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqnyd"]
atlas = ExtResource("10_kiovd")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8gi4"]
atlas = ExtResource("10_kiovd")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wvus"]
atlas = ExtResource("10_kiovd")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydoh6"]
atlas = ExtResource("10_kiovd")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xnnt"]
atlas = ExtResource("10_kiovd")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsw6e"]
atlas = ExtResource("10_kiovd")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_k87wk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw8at")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2fja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_goksr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quklo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0riw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_474lb")
}],
"loop": false,
"name": &"Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq4dp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n6db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfijq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnacq")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqmo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26vbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xtx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb5in")
}],
"loop": false,
"name": &"Hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv0na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5e23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi7o2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe5pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d62fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxqd7")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmvp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg66b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqnyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8gi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wvus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydoh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xnnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsw6e")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_revrt"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mjd8m"]
radius = 9.0

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_revrt")

[node name="Sprites" type="Node2D" parent="."]

[node name="Archer" type="AnimatedSprite2D" parent="Sprites"]
visible = false
sprite_frames = SubResource("SpriteFrames_nwtew")
animation = &"Attack"
autoplay = "Idle"

[node name="Swordsman" type="AnimatedSprite2D" parent="Sprites"]
visible = false
sprite_frames = SubResource("SpriteFrames_kiovd")
animation = &"Death"
autoplay = "Idle"

[node name="Orc" type="AnimatedSprite2D" parent="Sprites"]
visible = false
sprite_frames = SubResource("SpriteFrames_k87wk")
animation = &"Hurt"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_revrt")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
path_max_distance = 500.0
avoidance_enabled = true
radius = 15.0
max_neighbors = 30
debug_enabled = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_mjd8m")

[node name="HealthLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -25.0
offset_right = 35.5
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Health: ()"
horizontal_alignment = 1

[connection signal="animation_finished" from="Sprites/Archer" to="." method="_on_animation_finished"]
[connection signal="animation_finished" from="Sprites/Swordsman" to="." method="_on_animation_finished"]
[connection signal="animation_finished" from="Sprites/Orc" to="." method="_on_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
